--- a/product-manager.html
+++ b/product-manager.html
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdt/'>
+<h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdt/'>
     Product Manager-New Initiatives at DocsApp
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -175,7 +175,7 @@ Services.</p>
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsung-next/job/okwCafwm'>Samsung NEXT Careers - Principal Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsung-next/job/okwCafwm'>Samsung NEXT Careers - Principal Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -183,7 +183,7 @@ Services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Product Manager at Lumere in Chicago, IL.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://youvisit.applytojob.com/apply/F71NgD6uJ5/Product-Manager'>Product Manager - YouVisit LLC - Career Page</a></h5> 
+<h5><a href='https://youvisit.applytojob.com/apply/F71NgD6uJ5/Product-Manager'>Product Manager - YouVisit LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... You will be responsible for data solution products that utilize audience data and 
 deliver audience insights for B2B clients. You will have the opportunity to lead?...</p>
@@ -210,7 +210,7 @@ Manager to join our Product team in our San Francisco office. WHAT WE OFFER
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
+<h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -296,7 +296,7 @@ design solutions to our customer problems. Create user stories that communicate
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -319,7 +319,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -378,7 +378,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -473,7 +473,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
